--- a/ci.yml
+++ b/ci.yml
@@ -5,55 +5,56 @@ on:
     branches:
       - main
   pull_request:
+    branches:
+      - main
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
+
     steps:
+      - name: Checkout repo
+        uses: actions/checkout@v3
 
-    # 1. Checkout code
-    - name: Checkout repository
-      uses: actions/checkout@v3
+      - name: List files in repo root
+        run: ls -l
 
-    # 2. Set up Docker Buildx (for caching)
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      - name: List test_data contents
+        run: ls -l test_data
 
-    # 3. Build Docker image
-    - name: Build Docker image
-      run: |
-        docker build -t docker_first_pipeline:ci .
+      - name: List reference contents
+        run: ls -l reference
 
-    # 4. Run RNA-seq pipeline on fake test data
-    - name: Test RNA-seq pipeline
-      run: |
-        mkdir -p ci_test/output
-        docker run --rm \
-          -v $PWD/test_data:/data \
-          docker_first_pipeline:ci \
-          bash /pipeline/workflow/run_rna.sh \
-          /data/fake_rna_R1.fastq.gz \
-          /data/fake_rna_R2.fastq.gz \
-          /data/fake_genome.fa \
-          /data/output
+      - name: Build Docker image (verbose)
+        run: docker build --progress=plain -t docker_first_pipeline:ci .
 
-    # 5. Run ATAC-seq pipeline on fake test data
-    - name: Test ATAC-seq pipeline
-      run: |
-        mkdir -p ci_test/output
-        docker run --rm \
-          -v $PWD/test_data:/data \
-          docker_first_pipeline:ci \
-          bash /pipeline/workflow/run_atac.sh \
-          /data/fake_atac_R1.fastq.gz \
-          /data/fake_atac_R2.fastq.gz \
-          /data/fake_genome.fa \
-          condition1 \
-          /data/output
+      - name: Run RNA pipeline test
+        run: |
+          docker run --rm \
+            -v $PWD/test_data:/data/test_data \
+            -v $PWD/reference:/data/reference \
+            docker_first_pipeline:ci \
+            bash /pipeline/workflow/run_rna.sh \
+            /data/test_data/rna_R1.fastq.gz \
+            /data/test_data/rna_R2.fastq.gz \
+            /data/reference/test_reference.fa \
+            /data/output_rna
 
-    # 6. Check that output files exist
-    - name: Verify output files
-      run: |
-        set -e
-        test -f test_data/output/fake_rna_final.bam || echo "RNA final BAM missing" 
-        test -f test_data/output/condition1_merged.sorted.bam || echo "ATAC merged BAM missing"
+      - name: Check RNA output files
+        run: ls -l /data/output_rna || echo "No RNA output found"  # For debugging
+
+      - name: Run ATAC pipeline test
+        run: |
+          docker run --rm \
+            -v $PWD/test_data:/data/test_data \
+            -v $PWD/reference:/data/reference \
+            docker_first_pipeline:ci \
+            bash /pipeline/workflow/run_atac.sh \
+            /data/test_data/atac_R1.fastq.gz \
+            /data/test_data/atac_R2.fastq.gz \
+            /data/reference/test_reference.fa \
+            condition1 \
+            /data/output_atac
+
+      - name: Check ATAC output files
+        run: ls -l /data/output_atac || echo "No ATAC output found"  # For debugging
