--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         run: ls -l reference
 
       - name: Build Docker image (verbose)
-        run: docker build --progress=plain -t docker_first_pipeline:ci .
+        run: docker build --progress=plain -t docker_first_pipeline:ci -f docker_first_pipeline/docker
 
       - name: Run RNA pipeline test
         run: |
