--- a/ci.yml
+++ b/ci.yml
@@ -1,3 +1,4 @@
+
 name: Docker Pipeline CI
 
 on:
@@ -25,10 +26,17 @@ jobs:
       - name: List reference contents
         run: ls -l reference
 
-      
-      - name: Build Docker image (verbose)
-        run: docker build --progress=plain -t docker_first_pipeline:ci -f docker_first_pipeline/docker/Dockerfile .
+      - name: Verify Dockerfile path
+        run: |
+          echo "Current directory: $(pwd)"
+          ls -R docker_first_pipeline/docker
 
+      - name: Build Docker image (verbose)
+        run: |
+          docker build --progress=plain \
+            -t docker_first_pipeline:ci \
+            -f ./docker_first_pipeline/docker/Dockerfile \
+            .
 
       - name: Run RNA pipeline test
         run: |
@@ -43,7 +51,7 @@ jobs:
             /data/output_rna
 
       - name: Check RNA output files
-        run: ls -l /data/output_rna || echo "No RNA output found"  # For debugging
+        run: ls -l /data/output_rna || echo "No RNA output found"
 
       - name: Run ATAC pipeline test
         run: |
@@ -59,4 +67,4 @@ jobs:
             /data/output_atac
 
       - name: Check ATAC output files
-        run: ls -l /data/output_atac || echo "No ATAC output found"  # For debugging
+        run: ls -l /data/output_atac || echo "No ATAC output found"
