--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,44 +3,47 @@ name: Docker Pipeline CI
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
   pull_request:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout the repository
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      # Step 2: Verify repo structure for debugging
       - name: Verify repo structure
-        run: |
-          echo "Current directory: $(pwd)"
-          ls -R
+        run: ls -R
 
-      # Step 3: Build Docker image
-      - name: Build Docker image (verbose)
+      - name: Build Docker image
         run: |
           docker build --progress=plain \
             -t docker_first_pipeline:ci \
-            -f ./docker/Dockerfile \
-            .
+            -f ./docker/Dockerfile .
 
-      # ============================
-      # RNA Pipeline Test
-      # ============================
-      - name: Debug input files before RNA run
+      # Debug tools inside container
+      - name: Debug container environment
         run: |
-          echo "Checking test_data and reference directories:"
-          ls -lh test_data || echo "test_data missing"
-          ls -lh reference || echo "reference missing"
+          docker run --rm docker_first_pipeline:ci bash -c "
+            echo 'Checking tools:' &&
+            command -v samtools || echo 'samtools missing' &&
+            command -v bwa || echo 'bwa missing' &&
+            command -v trim_galore || echo 'trim_galore missing' &&
+            command -v bedtools || echo 'bedtools missing' &&
+            command -v picard || echo 'picard missing'
+          "
 
+      # Debug input files
+      - name: Debug input files
+        run: |
+          echo 'Host input files:'
+          ls -lh test_data || echo 'test_data missing'
+          ls -lh reference || echo 'reference missing'
+
+      # RNA pipeline
       - name: Run RNA pipeline test
         run: |
           mkdir -p output_rna
@@ -68,43 +71,4 @@ jobs:
           ls -R output_rna || echo "No RNA output found"
           if [ ! "$(ls -A output_rna)" ]; then
             echo "RNA pipeline produced no output" && exit 1
-          fi
-
-      # ============================
-      # ATAC Pipeline Test
-      # ============================
-      - name: Debug input files before ATAC run
-        run: |
-          echo "Checking test_data and reference directories:"
-          ls -lh test_data || echo "test_data missing"
-          ls -lh reference || echo "reference missing"
-
-      - name: Run ATAC pipeline test
-        run: |
-          mkdir -p output_atac
-          docker run --rm \
-            -v $PWD/test_data:/data/test_data \
-            -v $PWD/output_atac:/data/test_output_atac \
-            -v $PWD/reference:/data/reference \
-            docker_first_pipeline:ci \
-            bash /pipeline/workflow/run_atac_ci.sh \
-            /data/test_data/atac_R1.fastq.gz \
-            /data/test_data/atac_R2.fastq.gz \
-            /data/reference/test_reference.fa \
-            condition1 \
-            /data/test_output_atac
-
-      - name: Debug ATAC output inside container
-        run: |
-          docker run --rm \
-            -v $PWD/output_atac:/data/test_output_atac \
-            docker_first_pipeline:ci \
-            bash -c "echo 'Container output:' && ls -R /data/test_output_atac || echo 'No files inside container'"
-
-      - name: Check ATAC output files on host
-        run: |
-          echo "ATAC output directory on host:"
-          ls -R output_atac || echo "No ATAC output found"
-          if [ ! "$(ls -A output_atac)" ]; then
-            echo "ATAC pipeline produced no output" && exit 1
           fi
